# FFGL-person-matte

./: .gitignore  README.md
source/plugins/: CMakeLists.txt
source/plugins/AppleContourDetection/: AppleContourDetection.h  AppleContourDetection.mm  CMakeLists.txt  Info.plist.in  README.md
source/plugins/AppleMonocularDepth/: AppleMonocularDepth.h  AppleMonocularDepth.mm  CMakeLists.txt  Info.plist.in  README.md
source/plugins/ApplePersonSegmentation/: ApplePersonSegmentation.h  ApplePersonSegmentation.mm  CMakeLists.txt  Info.plist.in  README.md
